--- a/app/src/main/res/layout/image_browser.xml
+++ b/app/src/main/res/layout/image_browser.xml
@@ -2,20 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <ImageView android:id="@+id/thumbnail"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="left"
+    <ImageView
+        android:id="@+id/thumbnail"
         android:layout_width="80dp"
         android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="left"
         android:src="@drawable/placeholder" />
-    <TextView android:id="@+id/imageText"
+
+    <TextView
+        android:id="@+id/imageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:text="hello!"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="hello!" />
 
 </LinearLayout>
