--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="customPrimaryBackgroundColor">@color/md_light_blue_500</color>
+    <color name="customSecondaryBackgroundColor">@color/md_light_blue_700</color>
+    <color name="customColorBackgroundAccent">@color/md_white_1000</color>
+    <color name="customBackgroundAccent">@color/md_grey_300</color>
+
+    <color name="customPrimaryTextColor">@color/md_white_1000</color>
+    <color name="customSecondaryTextColor">@color/md_white_1000</color>
+
+    <color name="customBackgroundColor">@color/md_amber_100</color>
 </resources>
