--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.kevdez.imageviewer.MainActivity">
     <item
         android:id="@+id/action_refresh"
-        android:orderInCategory="100"
         android:title="@string/action_refresh"
-        app:showAsAction="never" />
+        android:orderInCategory="2"
+        custom:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        custom:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/action_search"
+        android:orderInCategory="1"
+        custom:actionViewClass="android.support.v7.widget.SearchView"
+        custom:showAsAction="ifRoom"/>
 </menu>
