--- a/app/src/main/res/layout/content_view_photo.xml
+++ b/app/src/main/res/layout/content_view_photo.xml
@@ -13,19 +13,16 @@
     tools:context="com.kevdez.imageviewer.ViewPhotoActivity"
     tools:showIn="@layout/activity_view_photo">
 
-    <include android:id="@+id/app_bar"
-        layout="@layout/toolbar"
-        android:layout_height="?actionBarSize"
-        android:layout_width="match_parent"/>
+    <ImageView
+            android:id="@+id/photo_image"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/placeholder"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/photo_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
